--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^2.1.0
+  charts_flutter: ^0.11.0
+  data_table_2: ^2.1.1
+  get: ^4.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,6 +52,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets: 
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
